# subaudit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  redirect.py  renovate.json  tox.ini
.github/: dependabot.yml
.github/workflows/: main.yml  markdown.yml  tox.yml  zizmor.yml
.tox/pypy37/: .tox-info.json
examples/notebooks/: from_readme.ipynb  input_events.ipynb  open_event.ipynb  skip_tinker.ipynb
examples/scripts/: redirect.py  simple.py  usemock.py
notebooks/: input_events.ipynb  open_event.ipynb  skip_if_unavailable.ipynb
src/subaudit/: __init__.py
tests/: _helpers.py  conftest.py  test_core.py  test_extracting.py  test_listening.py  test_lock.py  test_lowlevel.py  test_misc.py  test_real.py  test_repr.py  test_subaudit.py  test_utskip.py
