[tool.poetry]
name = "subaudit"
version = "0.1.0"
description = "Subscribe and unsubscribe on specific audit events"
authors = ["Eliah Kagan <degeneracypressure@gmail.com>"]
license = "0BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
sysaudit = { version = "^0.3.0", python = "~3.7" }

[tool.poetry.group.dev.dependencies]
flake8 = { version = "^6.0.0", python = ">=3.8.1,<4.0" }
mypy = "^1.2.0"
pylint = { version = "^2.17.2", python = ">=3.7.2,<4.0" }
pyright = "^1.1.302"
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
