[tool.poetry]
name = "subaudit"
version = "0.1.0"
description = "Subscribe and unsubscribe for specific audit events"
authors = ["Eliah Kagan <degeneracypressure@gmail.com>"]
license = "0BSD"
readme = "README.md"
homepage = "https://github.com/EliahKagan/subaudit"
repository = "https://github.com/EliahKagan/subaudit"
keywords = ["audit", "auditing", "events", "subscribe", "unsubscribe"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7"
sysaudit = { version = "^0.3.0", python = "~3.7" }

[tool.poetry.group.dev.dependencies]
attrs = "^22.2.0"
flake8 = { version = "^6.0.0", python = ">=3.8.1,<4.0" }
mypy = "^1.2.0"
pylint = { version = "^2.17.2", python = ">=3.7.2,<4.0" }
pyright = "^1.1.303"
pytest = "^7.3.1"
pytest-mock = "^3.10.0"
pytest-subtests = "^0.10.0"
typing-extensions = "^4.5.0"

[tool.poetry.group.notebook.dependencies]
ipykernel = { version = "^6.22.0", python = ">=3.8,<4.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
