[tool.poetry]
name = "subaudit"
version = "0.1.0"
description = "Subscribe and unsubscribe for specific audit events"
authors = ["Eliah Kagan <degeneracypressure@gmail.com>"]
license = "0BSD"
readme = "README.md"
homepage = "https://github.com/EliahKagan/subaudit"
repository = "https://github.com/EliahKagan/subaudit"
keywords = ["audit", "auditing", "events", "subscribe", "unsubscribe"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7"
sysaudit = { version = "^0.3.0", python = "~3.7" }

[tool.poetry.group.test.dependencies]
attrs = "~24.2.0"
mock = "^5.1.0"
pytest = [
    { version = "^7.4.4", python = "~3.7" },
    { version = "^8.1.1", python = "^3.8" },
]
pytest-check = "^2.3.1"
pytest-mock = [
    { version = "^3.11.1", python = "~3.7" },
    { version = "^3.12.0", python = "^3.8" },
]
pytest-subtests = "^0.13.1"
python-clock-timer = "^0.4.0"
types-mock = [
    { version = "^5.1.0.3", python = "~3.7" },
    { version = "^5.1.0.20240311", python = "^3.8" },
]
typing-extensions = [
    { version = "^4.7.1", python = "~3.7" },
    { version = "^4.10.0", python = "^3.8" },
]

[tool.poetry.group.analyze.dependencies]
flake8 = { version = "^7.0.0", python = "^3.8.1" }
isort = "~5.11.5"
mypy = [
    { version = "~1.4.1", python = "~3.7" },
    { version = "^1.5.0", python = "^3.8" },
]
pylint = { version = "^2.17.7", python = "^3.7.2" }
pyright = "^1.1.354"

[tool.poetry.group.notebook.dependencies]
ipykernel = { version = "^6.29.3", python = "^3.8" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
atomic = true
force_sort_within_sections = true
include_trailing_comma = true
multi_line_output = 3

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "clock_timer"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest_check.context_manager"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest_subtests"
ignore_missing_imports = true

[tool.pylint.main]
disable = ["too-few-public-methods"]

[tool.pytest.ini_options]
markers = [
    "slow: mark a test as slow.",
    "implementation_detail: mark a test as making a claim known to be likely to change.",
]
mock_use_standalone_module = true
